price-sum:rewrite css

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,9 +3,9 @@
 // }
 
 .page-root {
-//   display: flex;
-//   flex-direction: row;
-//   flex-wrap: nowrap;
+   display: flex;
+   flex-direction: row;
+   flex-wrap: nowrap;
   height: 100%;
   width: 100%;
 }
@@ -33,9 +33,9 @@ nz-header {
   padding: 0;
 }
 
-//   nz-content {
-//     margin: 0 6px;
-//   }
+   nz-content {
+     margin: 0 6px;
+   }
 
 nz-breadcrumb {
   margin: 16px 0;
