--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,53 +1,3 @@
-<!-- <div class="page-root">
-  <ul nz-menu nzMode="inline">
-    <li nz-submenu nzTitle="Navigation One" nzIcon="mail" nzOpen>
-      <ul>
-        <li nz-menu-group nzTitle="Item 1">
-          <ul>
-            <li nz-menu-item nzSelected [routerLink]="['/price-sum']">Price Sum</li>
-            <li nz-menu-item>Option 2</li>
-          </ul>
-        </li>
-        <li nz-menu-group nzTitle="Item 2">
-          <ul>
-            <li nz-menu-item>Option 3</li>
-            <li nz-menu-item>Option 4</li>
-          </ul>
-        </li>
-      </ul>
-    </li>
-    <li nz-submenu nzTitle="Navigation Two" nzIcon="appstore">
-      <ul>
-        <li nz-menu-item>Option 5</li>
-        <li nz-menu-item>Option 6</li>
-        <li nz-submenu nzTitle="Submenu">
-          <ul>
-            <li nz-menu-item>Option 7</li>
-            <li nz-menu-item>Option 8</li>
-            <li nz-submenu nzTitle="Submenu">
-              <ul>
-                <li nz-menu-item>Option 9</li>
-                <li nz-menu-item>Option 10</li>
-              </ul>
-            </li>
-          </ul>
-        </li>
-      </ul>
-    </li>
-    <li nz-submenu nzTitle="Navigation Three" nzIcon="setting">
-      <ul>
-        <li nz-menu-item>Option 11</li>
-        <li nz-menu-item>Option 12</li>
-        <li nz-menu-item>Option 13</li>
-      </ul>
-    </li>
-  </ul>
-
-  <div>
-    <router-outlet></router-outlet>
-  </div>
-
-</div> -->
 
 <nz-layout class="page-root" >
   <nz-sider nzTheme="light" nzCollapsible [(nzCollapsed)]="isCollapsed" [nzTrigger]="null">
@@ -78,14 +28,14 @@
     </nz-header>
     <nz-content>
       <nz-breadcrumb>
-        <!-- <nz-breadcrumb-item>User</nz-breadcrumb-item>
-            <nz-breadcrumb-item>Bill</nz-breadcrumb-item> -->
+<!--         <nz-breadcrumb-item>User</nz-breadcrumb-item>-->
+<!--            <nz-breadcrumb-item>Bill</nz-breadcrumb-item> -->
       </nz-breadcrumb>
       <div class="inner-content">
         <router-outlet></router-outlet>
       </div>
     </nz-content>
-    <nz-footer></nz-footer>
+<!--    <nz-footer></nz-footer>-->
   </nz-layout>
 
 </nz-layout>
