--- a/src/app/price-sum/price-sum.component.html
+++ b/src/app/price-sum/price-sum.component.html
@@ -1,24 +1,22 @@
-<h2>计算总价</h2>
-
-
+<h3>计算总价</h3>
 <div class="body">
-  <div class="center display-area">
+
+  <div class="display-area">
     <h3>{{lastPriceSum}}</h3>
     <h2>{{priceSum}}</h2>
   </div>
-  <div class="center">
+
+  <div class="center text-area">
     <mat-form-field appearance="outline">
       <mat-label>please input price text</mat-label>
       <textarea matInput cdkTextareaAutosize=true cdkAutosizeMinRows="10" placeholder="price text"
                 [(ngModel)]="priceText"></textarea>
-      <!-- <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
-        <mat-hint>Hint</mat-hint> -->
     </mat-form-field>
   </div>
 
-  <div class="center">
-    <button mat-fab color="primary" (click)="sumPrice()">计算</button>
-    <button mat-fab color="warn" (click)="clear()">清空</button>
+  <div class="actions">
+    <button mat-raised-button color="primary" (click)="sumPrice()">计算</button>
+    <button mat-raised-button color="warn" (click)="clear()">清空</button>
   </div>
 
 </div>
