--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,41 +1,23 @@
+<div class="container" [class.is-mobile]="mobileQuery.matches">
+  <mat-toolbar color="primary" class="toolbar">
+    <button mat-icon-button (click)="sidenav.toggle()">
+      <mat-icon>menu</mat-icon>
+    </button>
+    <h1 class="app-name">Calculator</h1>
+  </mat-toolbar>
 
-<nz-layout class="page-root" >
-  <nz-sider nzTheme="light" nzCollapsible [(nzCollapsed)]="isCollapsed" [nzTrigger]="null">
-    <!-- <div class="logo"></div> -->
-    <ul nz-menu nzTheme="light" nzMode="inline" [nzInlineCollapsed]="isCollapsed">
-      <li nz-submenu nzTitle="计算" nzIcon="calculator">
-        <ul>
-          <li nz-menu-item>总价</li>
-        </ul>
-      </li>
-      <!-- <li nz-submenu nzTitle="Team" nzIcon="team">
-        <ul>
-          <li nz-menu-item>Team 1</li>
-          <li nz-menu-item>Team 2</li>
-        </ul>
-      </li>
-      <li nz-menu-item>
-        <i nz-icon nzType="file"></i>
-        <span>File</span>
-      </li> -->
-    </ul>
-  </nz-sider>
 
-  <nz-layout>
-    <nz-header>
-      <i class="trigger" nz-icon [nzType]="isCollapsed ? 'menu-unfold' : 'menu-fold'"
-        (click)="isCollapsed = !isCollapsed"></i>
-    </nz-header>
-    <nz-content>
-      <nz-breadcrumb>
-<!--         <nz-breadcrumb-item>User</nz-breadcrumb-item>-->
-<!--            <nz-breadcrumb-item>Bill</nz-breadcrumb-item> -->
-      </nz-breadcrumb>
-      <div class="inner-content">
-        <router-outlet></router-outlet>
-      </div>
-    </nz-content>
-<!--    <nz-footer></nz-footer>-->
-  </nz-layout>
+  <mat-sidenav-container class="sidenav-container" [style.marginTop.px]="mobileQuery.matches ? 56 : 0">
+    <mat-sidenav #sidenav [mode]="mobileQuery.matches ? 'over' : 'side'"
+                 [fixedInViewport]="mobileQuery.matches" fixedTopGap="56">
+      <mat-nav-list>
+        <a mat-list-item [routerLink]="['/price/sum']" (click)="sidenav.toggle()">计算总价</a>
+      </mat-nav-list>
+    </mat-sidenav>
 
-</nz-layout>
+    <mat-sidenav-content>
+      <router-outlet></router-outlet>
+    </mat-sidenav-content>
+  </mat-sidenav-container>
+
+</div>
