--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -23,6 +23,7 @@ h1.app-name {
   /* When the sidenav is not fixed, stretch the sidenav container to fill the available space. This
      causes `<mat-sidenav-content>` to act as our scrolling element for desktop layouts. */
   flex: 1;
+  
 }
 //TODO
 .is-mobile .sidenav-container {
@@ -30,3 +31,28 @@ h1.app-name {
      `<body>` to be our scrolling element for mobile layouts. */
   flex: 1 0 auto;
 }
+
+.footer{
+  
+}
+
+.divider{
+  margin: 20px 5px 10px;
+}
+
+.record{
+  font-size: 13px;
+  color: #999999;
+  margin-right: 10px;
+  display: flex;
+  flex-direction: row-reverse;
+
+  a{
+    text-decoration: none;
+    color: #999999;
+  }
+  a:hover{
+    color: blue;
+  }
+}
+
