--- a/src/app/price-sum/price-sum.component.html
+++ b/src/app/price-sum/price-sum.component.html
@@ -1,4 +1,7 @@
-<h3>计算总价</h3>
+<div class="title">
+  <h3>Price Sum</h3>
+</div>
+
 <div class="body">
 
   <div class="display-area">
@@ -15,8 +18,8 @@
   </div>
 
   <div class="actions">
-    <button mat-raised-button color="primary" (click)="sumPrice()">计算</button>
-    <button mat-raised-button color="warn" (click)="clear()">清空</button>
+    <button mat-raised-button color="primary" (click)="sumPrice()">add</button>
+    <button mat-raised-button color="warn" (click)="clear()">clear</button>
   </div>
 
 </div>
