--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,14 +11,17 @@
     <mat-sidenav #sidenav [mode]="mobileQuery.matches ? 'over' : 'side'"
                  [fixedInViewport]="mobileQuery.matches" fixedTopGap="56">
       <mat-nav-list>
-        <a mat-list-item [routerLink]="['/price/sum']" (click)="sidenav.toggle()">计算总价</a>
+        <a mat-list-item [routerLink]="['/price/sum']" (click)="sidenav.toggle()">Price Sum</a>
       </mat-nav-list>
     </mat-sidenav>
 
     <mat-sidenav-content class="content">
-      <router-outlet></router-outlet>
+      <div>
+        <router-outlet></router-outlet>
+      </div>
+      
       <div class="footer">
-        <mat-divider [inset]="true" class="divider"></mat-divider>
+        <mat-divider class="divider"></mat-divider>
         <div class="record">
           <a href="http://beian.miit.gov.cn">晋ICP备19012102号</a>
           <span>Copyright © 2020 By Muyun &nbsp;</span>
@@ -26,6 +29,5 @@
       </div>
     </mat-sidenav-content>
   </mat-sidenav-container>
-  
 </div>
 
